--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -299,7 +299,7 @@ where $nCU$ is the number of CUs being used (3, 4, or 5), $S_{i,t}$ is the abund
 Logistic regression model fits in 2020 from the integrated Logistic:Sgen-Ricker, Logistic:Sgen-priorCap and Logistic:IFCRT models are shown in Figure \@ref(fig:coho-IM-logisticFit2020). All three logistic regression LRP methods were able to converge on a solution in 2020. Resulting LRPs for different *p* thresholds are shown on the regression curves, as well as in Table \@ref(tab:logisticLRPs2020). There was considerable uncertainty around predicted curves as seen in the large areas of gray shading in Figure \@ref(fig:coho-IM-logisticFit2020).  
 
 
-```{r coho-IM-logisticFit2020, fig.cap="Logistic regression fit from the three logistic regression models: Logistic:Sgen-Ricker, Logistic:Sgen-priorCap and Logistic:IFCRT LRP model using data from 1998 - 2020. Dots represent individual years and 'x' represents the latest year in the time series. The yellow vertical line shows the LRP estimate based on the requirement of a 50\\% probability of all CUs being above Sgen, while the yellow shaded region shows the associated 95\\% confidence interval around the LRP. LRPs for three alternative probability thresholds, 66\\%, 90\\%, and 99\\%, are shown in blue, green, and orange, respectively.", warning=FALSE, echo=FALSE, out.width = '90%', fig.align="center"}
+```{r coho-IM-logisticFit2020, fig.cap="Logistic regression fit from the three logistic regression models: Logistic:Sgen-Ricker, Logistic:Sgen-priorCap and Logistic:IFCRT LRP model using data from 1998 - 2020. Dots represent individual years and 'x' represents the latest year in the time series. The yellow vertical line shows the LRP estimate based on the requirement of a 50\\% probability of all CUs being above S\\textsubscript{gen}, while the yellow shaded region shows the associated 95\\% confidence interval around the LRP. LRPs for three alternative probability thresholds, 66\\%, 90\\%, and 99\\%, are shown in blue, green, and orange, respectively.", warning=FALSE, echo=FALSE, out.width = '90%', fig.align="center"}
 knitr::include_graphics("figure/coho-all-LogisticLRP.png")
 ```
 \linebreak
@@ -307,7 +307,7 @@ knitr::include_graphics("figure/coho-all-LogisticLRP.png")
 When the Logistic:Sgen-Ricker model was used, aggregate abundance LRPs ranged from  21,189 to 35,737 spawners, depending on whether the required probability of all CUs being above S~gen~ was moderate (50%) or very likely (99%) (Table \@ref(tab:logisticLRPs2020)). LRPs increased across all probability levels when the carrying capacity was assumed higher under the Logistic:Sgen-priorCap model (Table \@ref(tab:logisticLRPs2020)). The higher S~gen~ values for most CUs under the alternative Logistic:Sgen_priorCap model formulation resulted in more historical years in which < 100% of CUs were above S~gen~. The result was a shift of the logistic curve to the right (Figure \@ref(fig:coho-IM-logisticFit2020)). LRPs based on the Logistic:Sgen_priorCap model ranged from 23,245 to 39,200 spawners, depending on whether the required probability of all CUs being above S~gen~ was moderate (50%) or very likely (99%).  
 
 
-When CU status was based on the IFCRT distributional target, the fit of the logistic curve had a more gradual slope <!--CH 1 Feb replaced "was more gradual"--> than the two S~gen~ models due to a greater overlap in 'successful' (all CUs > distributional target) and 'unsuccessful' (<100% of CUs above distributional target) years at low to moderate aggregate abundances.  In 3 of the 6 years with aggregate abundances below 20,000 spawners, the distributional target was not met for all CUs (Figure \@ref(fig:coho-IM-logisticFit2020)). LRPs based on this model also became increasingly large at high probability thresholds (Table \@ref(tab:logisticLRPs2020)). The LRP based on a 99% probability was 44,403 spawners, with a 95% confidence interval extending from 15,102 - 73,703 spawners.  
+When CU status was based on the IFCRT distributional target, the fit of the logistic curve had a more gradual slope than the two S~gen~ models due to a greater overlap in 'successful' (all CUs > distributional target) and 'unsuccessful' (<100% of CUs above distributional target) years at low to moderate aggregate abundances.  In 3 of the 6 years with aggregate abundances below 20,000 spawners, the distributional target was not met for all CUs (Figure \@ref(fig:coho-IM-logisticFit2020)). LRPs based on this model also became increasingly large at high probability thresholds (Table \@ref(tab:logisticLRPs2020)). The LRP based on a 99% probability was 44,403 spawners, with a 95% confidence interval extending from 15,102 - 73,703 spawners.  
 
 
 \renewcommand*{\arraystretch}{1.5}
@@ -519,7 +519,7 @@ Exploitation rates for Interior Fraser Coho are only available at the SMU-level 
 
 Aggregate abundance LRPs estimated using the Ricker model as a basis for forward projections were lower than those obtained when the Ricker_priorCap model was used, regardless of which probability threshold was used (Table \@ref(tab:projectedLRPs2020); Figure \@ref(fig:coho-projLRPCurveByOM)). This result is similar to the logistic regression LRPs, where LRPs derived using S~gen~ estimates from the Ricker_priorCap model were higher due to higher S~gen~ values.  The projected curve showing the probability of all CUs being above S~gen~ had a slope that was more gradual and further from the origin for the Ricker_priorCap model compared to the base Ricker model (Figure \@ref(fig:coho-projLRPCurveByOM)). When projection outputs from both stock recruitment model formulations were combined prior to binning in order to create a model-averaged scenario (with equal weight assigned to both scenarios), the resulting probability curve was mid-way between the curves from the two individual models. In all cases, projected curves had higher scatter with increasing aggregate abundance, such that LRP estimates at probability thresholds of p = 0.90 and p = 0.99 were unstable.
 
-```{r coho-projLRPCurveByOM, fig.cap="Probability of all CUs being above their lower benchmark of Sgen along a gradient in aggregate abundances within bins of 200 fish for two different stock recruit model options (Ricker and Ricker\\_priorCap) as well as a model averaged case (Combined) in which results from both stock recruitment models were equally weighted. Results are derived from projections over 30 years and 20,000 MC Trials. Each dot is the proportion of MC trials where all CUs were > lower benchmarks of S\\textsubscript{gen}. Candidate LRPs at p=0.5 (yellow) and p=0.66 (blue), 0.90 (green), and 0.99 (orange) are highlighted.", warning=FALSE, echo=FALSE, out.width = '50%',  fig.align="center"}
+```{r coho-projLRPCurveByOM, fig.cap="Probability of all CUs being above their lower benchmark of S\\textsubscript{gen} along a gradient in aggregate abundances within bins of 200 fish for two different stock recruit model options (Ricker and Ricker\\_priorCap) as well as a model averaged case (Combined) in which results from both stock recruitment models were equally weighted. Results are derived from projections over 30 years and 20,000 MC Trials. Each dot is the proportion of MC trials where all CUs were > lower benchmarks of S\\textsubscript{gen}. Candidate LRPs at p=0.5 (yellow) and p=0.66 (blue), 0.90 (green), and 0.99 (orange) are highlighted.", warning=FALSE, echo=FALSE, out.width = '50%',  fig.align="center"}
 knitr::include_graphics("figure/coho-projLRPCurve-byOM.png")
 ```
 
@@ -554,14 +554,14 @@ knitr::include_graphics("figure/coho-EscpSeries-wProjLRP.png")
 
 Increasing $\sigma_{\gamma}$, which corresponded with reduced between-CU pairwise correlation in spawner abundances over time (Figure \@ref(fig:coho-sigGammaCorrelation)), resulted in a flattening of the projected relationship between aggregate spawner abundances and the probability of all CUs being above their lower benchmarks. LRP estimates corresponding to a given probability threshold increased as $\sigma_{\gamma}$ increased as curves shifted to the right and became more gradual (i.e., less steep). For the two highest $\sigma_{\gamma}$ scenarios examined ($\sigma_{\gamma}$=0.0675 and 0.09), a 99% probability of all CUs being above their lower S~gen~ benchmark was never achieved.            
 
-```{r coho-projLRPCurve-bySigGamma, fig.cap="Probability of all CUs being above their lower benchmark of Sgen along a gradient in aggregate abundances (within bins of 200 fish) for alternative scenarios about the value of sigGamma. The baseline value used for forward projections was sigGamma = 0. Results are derived from projections over 30 years and 20,000 MC Trials. Each dot is the proportion of MC trials where all CUs were > Sgen.  Candidate LRPs at p=0.5 (yellow) and p=0.66 (blue), 0.90 (green), and 0.99 (orange) are highlighted.", warning=FALSE, echo=FALSE, out.width = '60%',  fig.align="center"}
+```{r coho-projLRPCurve-bySigGamma, fig.cap="Probability of all CUs being above their lower benchmark of Sgen along a gradient in aggregate abundances (within bins of 200 fish) for alternative scenarios about the value of sigGamma. The baseline value used for forward projections was sigGamma = 0. Results are derived from projections over 30 years and 20,000 MC Trials. Each dot is the proportion of MC trials where all CUs were > S\\textsubscript{gen}.  Candidate LRPs at p=0.5 (yellow) and p=0.66 (blue), 0.90 (green), and 0.99 (orange) are highlighted.", warning=FALSE, echo=FALSE, out.width = '70%',  fig.align="center"}
 knitr::include_graphics("figure/coho-projLRPCurve-bySigGamma.png")
 ```
 
 Increasing the average exploitation rate used in forward projections also led to a shift in projected curves to the right; however, the shift was more gradual over the range of exploitation rate scenarios we considered than the effect of increasing $\sigma_{\gamma}$ (Figure \@ref(fig:coho-projLRPCurve-byER)). The effect of increasing exploitation rates was smallest at low probability thresholds. At p = 0.5, the LRP differed by 400 fish between the ER = 2.5% and ER = 12.5% scenarios (range = 19,700 - 21,000), and by < 4000 fish among all four scenarios (range = 19,700 - 24,000). Differences were much larger among the four exploitation rate levels examined for the p = 0.90 threshold. When the average exploitation rate was set at 22.5% or 32.5%, aggregate abundances barely exceeded 60,000 fish, and it was not possible to achieve a 99% probability of all CUs being above their lower S~gen~ benchmarks.  
 
 
-```{r coho-projLRPCurve-byER, fig.cap="Probability of all CUs being above their lower benchmark of Sgen along a gradient in aggregate abundances (within bins of 200 fish) for alternative scenarios about average exploitation rates (ER) in forward projections. The baseline value used for forward projections was ER = 12.5\\%. Results are derived from projections over 30 years and 20,000 MC Trials. Each dot is the proportion of MC trials where all CUs were > Sgen.  Candidate LRPs at p=0.5 (yellow) and p=0.66 (blue), 0.90 (green), and 0.99 (orange) are highlighted.", warning=FALSE, echo=FALSE, out.width = '60%',  fig.align="center"}
+```{r coho-projLRPCurve-byER, fig.cap="Probability of all CUs being above their lower benchmark of Sgen along a gradient in aggregate abundances (within bins of 200 fish) for alternative scenarios about average exploitation rates (ER) in forward projections. The baseline value used for forward projections was ER = 12.5\\%. Results are derived from projections over 30 years and 20,000 MC Trials. Each dot is the proportion of MC trials where all CUs were > S\\textsubscript{gen}.  Candidate LRPs at p=0.5 (yellow) and p=0.66 (blue), 0.90 (green), and 0.99 (orange) are highlighted.", warning=FALSE, echo=FALSE, out.width = '70%',  fig.align="center"}
 knitr::include_graphics("figure/coho-projLRPCurve-byER.png")
 ```
 
@@ -572,7 +572,7 @@ knitr::include_graphics("figure/coho-projLRPCurve-byER.png")
 We compared annual estimates of SMU status relative to LRPs for the range of LRP estimation options considered in this case study (Figure \@ref(fig:coho-statusPlot-withBars)). For all aggregate abundance LRPs, we illustrate LRPs estimated from a probability threshold of p = 0.5 (i.e., a 50% probability that all CUs would have status above their lower benchmark). We used the following labeling convention when comparing historical status estimates across LRP estimation methods: *"Metric" : "LRP Method" : "CU Status Method"*. 'Metric' refers to the choice of whether to base an LRP on the proportion of CUs above Red CU status (Prop) or on aggregate SMU-level abundance (Abund). The 'LRP' method only applies to aggregate-abundance based LRPs, which can be logistic regression (Logistic) or projection (Proj). Finally, the 'CU Status Method' can be based on the multidimensional algorithm within the Pacific Salmon Status Scanner in which CU abundance benchmarks are based on one of the two Ricker models (Scanner-Ricker or Scanner-priorCap). Alternatively, when only a single benchmark is used to characterize CU status, it can be based on S~gen~ estimated from one of the two Ricker models (Sgen-Ricker or Sgen-priorCap) or the IFCRT target (IFCRT). For example, when referring to an aggregate abundance LRP that is estimated via a logistic regression fit to historical CU status, with CU status estimated relative to S~gen~ from the base Ricker model, it was labelled as "Abund: Logistic: Sgen_Ricker".  
 
 
-```{r coho-statusPlot-withBars, fig.cap="Historical evaluation of status relative to LRP options considered for Interior Fraser Coho. The black line shows the 2000-2020 generational mean aggregate spawning abundance to the SMU. Red bars indicate years in which SMU status would have been assessed as being below the LRP. Estimates of Sgen benchmarks and aggregate abundance LRPs were based on data available up to 2020", warning=FALSE, echo=FALSE, out.width = '80%',  fig.align="center"}
+```{r coho-statusPlot-withBars, fig.cap="Historical evaluation of status relative to LRP options considered for Interior Fraser Coho. The black line shows the 2000-2020 generational mean aggregate spawning abundance to the SMU. Red bars indicate years in which SMU status would have been assessed as being below the LRP. Estimates of S\\textsubscript{gen} benchmarks and aggregate abundance LRPs were based on data available up to 2020", warning=FALSE, echo=FALSE, out.width = '85%',  fig.align="center"}
 knitr::include_graphics("figure/coho-statusPlot_withBars2020.png")
 ```
 
