rmoved -> after Table 5

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -443,8 +443,8 @@ Variability in exploitation rates among CUs & CV = 0.221 & Assumed to be half of
 \\\\ 
 
 Initial abundances  & CU-specific & Based on spawner-recruit series
-<!--\\
-\hline-->
+
+\hline
 (\#tab:coho-BaseProjectPars)
 \end{longtable}
 
